--- a/src/kit/blocks/expander/expander.scss
+++ b/src/kit/blocks/expander/expander.scss
@@ -37,6 +37,8 @@
     padding-left: 0;
     color: $dark-shade100;
     font-size: px-to-rem(12px);
+    margin-top: 2px;
+    margin-bottom: 2px;
     font-weight: bold;
     text-transform: uppercase;
   }
